fix: scroll enable on smaller screen

--- a/src/containers/ReviewModal/ReviewModal.scss
+++ b/src/containers/ReviewModal/ReviewModal.scss
@@ -24,6 +24,10 @@
     padding: 0 !important;
     overflow-y: hidden !important;
 
+    & > div.pgn__modal-body-content {
+      overflow-y: scroll;
+    }
+
     .content-block .col {
       padding: 0;
     }
